--- a/timestamp-batch-task-app-dependencies/pom.xml
+++ b/timestamp-batch-task-app-dependencies/pom.xml
@@ -21,8 +21,7 @@
         <dependencies>
             <dependency>
                 <groupId>org.springframework.cloud.task.app</groupId>
-                <artifactId>spring-cloud-starter-task-timestamp-batch
-                </artifactId>
+                <artifactId>spring-cloud-starter-task-timestamp-batch</artifactId>
                 <version>1.2.1.BUILD-SNAPSHOT</version>
             </dependency>
         </dependencies>
