--- a/timestamp-batch-task-app-dependencies/pom.xml
+++ b/timestamp-batch-task-app-dependencies/pom.xml
@@ -22,7 +22,7 @@
             <dependency>
                 <groupId>org.springframework.cloud.task.app</groupId>
                 <artifactId>spring-cloud-starter-task-timestamp-batch</artifactId>
-                <version>1.0.0.M1</version>
+                <version>1.0.0.BUILD-SNAPSHOT</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
