--- a/timestamp-batch-task-app-dependencies/pom.xml
+++ b/timestamp-batch-task-app-dependencies/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.springframework.cloud.task.app</groupId>
     <artifactId>timestamp-batch-task-app-dependencies</artifactId>
-    <version>1.0.0.M1</version>
+    <version>1.0.0.BUILD-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>timestamp-batch-task-app-dependencies</name>
     <description>Spring Cloud Task Timestamp Batch App Dependencies
