--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>timestamp-batch-task-app-starters-build</artifactId>
-    <version>2.0.0.BUILD-SNAPSHOT</version>
+    <version>2.0.0.M1</version>
     <packaging>pom</packaging>
 
     <parent>
@@ -24,7 +24,7 @@
             <dependency>
                 <groupId>org.springframework.cloud.task.app</groupId>
                 <artifactId>timestamp-batch-task-app-dependencies</artifactId>
-                <version>2.0.0.BUILD-SNAPSHOT</version>
+                <version>2.0.0.M1</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
