--- a/spring-cloud-starter-task-timestamp-batch/pom.xml
+++ b/spring-cloud-starter-task-timestamp-batch/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.springframework.cloud.task.app</groupId>
         <artifactId>timestamp-batch-task-app-starters-build</artifactId>
-        <version>2.1.0.M1</version>
+        <version>2.1.0.BUILD-SNAPSHOT</version>
     </parent>
 
     <dependencies>
