--- a/timestamp-batch-task-app-dependencies/pom.xml
+++ b/timestamp-batch-task-app-dependencies/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.springframework.cloud.task.app</groupId>
     <artifactId>timestamp-batch-task-app-dependencies</artifactId>
-    <version>2.1.0.BUILD-SNAPSHOT</version>
+    <version>2.1.0.RC1</version>
     <packaging>pom</packaging>
     <name>timestamp-batch-task-app-dependencies</name>
     <description>Spring Cloud Task Timestamp Batch App Dependencies
@@ -14,7 +14,7 @@
     <parent>
         <artifactId>spring-cloud-dependencies-parent</artifactId>
         <groupId>org.springframework.cloud</groupId>
-        <version>2.1.0.RC3</version>
+        <version>2.1.2.RELEASE</version>
         <relativePath/>
     </parent>
     <dependencyManagement>
@@ -22,7 +22,7 @@
             <dependency>
                 <groupId>org.springframework.cloud.task.app</groupId>
                 <artifactId>spring-cloud-starter-task-timestamp-batch</artifactId>
-                <version>2.1.0.BUILD-SNAPSHOT</version>
+                <version>2.1.0.RC1</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
