Enable Docker metadata support
 Resolves #18

--- a/spring-cloud-starter-task-timestamp-batch/pom.xml
+++ b/spring-cloud-starter-task-timestamp-batch/pom.xml
@@ -69,6 +69,7 @@
                     <generatedApps>
                         <timestamp-batch-task/>
                     </generatedApps>
+                    <enableContainerImageMetadata>true</enableContainerImageMetadata>
                 </configuration>
             </plugin>
         </plugins>
